Add Image Search Feature/Functionality

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* General */
 
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -24,16 +25,20 @@ nav a:hover {
     text-decoration: underline;
 }
 
+#homepage {
+    color: blue;
+}
+
 /* Header */
 
 h1 {
-    font-size: 88px;
+    font-size: 86px;
     display: flex;
     justify-content: center;
-    margin-top: 5%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 6%;
     font-weight: 620;
     letter-spacing: -3px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .blue {
@@ -46,24 +51,26 @@ color: rgb(57, 140, 223);
 }
 
 .yellow {
-color: rgb(255, 221, 0);
+color: rgb(255, 200, 0);
 }
 
 .green {
-color: rgb(13, 154, 13);
+color: rgb(41, 173, 41);
 }
 
 .red {
-color: red;
+color: rgb(221, 62, 62);
 }
 
 h3 {
-    margin-top: -77px;
+    margin-top: -72px;
     margin-left: 14%;
     display: flex;
     justify-content: center;
-    font-size: 15px;
-    color: grey;
+    font-size: 16px;
+    font-weight: 500;
+    color: #4285f4;
+    margin-bottom: -4px;
 }
 
 /* Search Bar */
@@ -72,18 +79,19 @@ form {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 38%;
+    margin-top: 39%;
 }
 
 form input[type="text"] {
     border-radius: 30px;
     margin-right: 10px;
     height: 40px;
-    width: 40%;
+    width: 39%;
     align-self: center;
-    margin-top: -65%;
+    margin-top: -66%;
     border: solid lightgrey;
     border-width: 1px;
+    padding-left: 20px;
 }
 
 form input[type="text"]:hover {
@@ -91,8 +99,7 @@ form input[type="text"]:hover {
     border-color: lightgray;
 } 
 
-
-/* Buttons Styles */
+/* Buttons */
 
 form .buttons {
 display: flex;
