--- a/advanced.css
+++ b/advanced.css
@@ -5,6 +5,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+h1 {
+    color: #d93025;
+    font-size: 20px;
+    font-weight: normal;
+    margin-top: 51px;
+    margin-left: 37px;
+    margin-bottom: 20px;
+}
+
+
 /* Logo */
 
 #logo img {
@@ -40,3 +50,65 @@ nav a:hover {
 #homepage {
     color: blue;
 }
+
+/* Form & Labels */
+
+form h2 {
+    font-size: 16px;
+    font-weight: normal;
+    border-top: solid rgb(235, 235, 235);
+    border-width: 1px;
+    margin-top: 22px;
+    padding-top: 50px;
+    margin-bottom: 20px;
+}
+
+form {
+    margin-left: 37px;
+    font-size: 13px;
+}
+
+form div {
+    display: flex;
+    align-items: center;
+    margin-top: 16px;
+}
+
+form label {
+    text-align: left; 
+    margin-right: 30px; 
+    width: 150px;
+}
+
+form input[type="text"] {
+    padding: 4px;
+    border-color: rgb(226, 226, 226);
+    border-width: 1px;
+    flex: 0 0 600px; 
+}
+
+/* Advanced Search Button */
+
+form input[type="submit"] {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    background-color: #4d90fe;
+    border: 1px solid #3079ed;
+    color: #fff;
+    padding: 8px;
+    font-weight: bold;
+    border-radius: 4px;
+    font-size: 12px;
+    margin-left: 655px;
+    margin-top: 10px;
+}
+
+form input[type="submit"]:hover {
+    background-image: -webkit-linear-gradient(top, #4d90fe, #4787ed);
+    background-image: -moz-linear-gradient(top, #4d90fe, #4787ed);
+    background-image: -ms-linear-gradient(top, #4d90fe, #4787ed);
+    background-image: -o-linear-gradient(top, #4d90fe, #4787ed);
+    background-image: linear-gradient(top, #4d90fe, #4787ed);   
+}
+
