Add CSS media queries

--- a/advanced.css
+++ b/advanced.css
@@ -1,6 +1,6 @@
+/* advanced.css */
 
 /* General */
-
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -16,7 +16,6 @@ h1 {
 
 
 /* Logo */
-
 #logo img {
     display: inline-block;
     height: 24px;
@@ -27,7 +26,6 @@ h1 {
 }
 
 /* Navigation Bar */
-
 nav {
     display: flex;
     align-items: flex-end;
@@ -52,7 +50,6 @@ nav a:hover {
 }
 
 /* Form & Labels */
-
 form h2 {
     font-size: 16px;
     font-weight: normal;
@@ -88,7 +85,6 @@ form input[type="text"] {
 }
 
 /* Advanced Search Button */
-
 form input[type="submit"] {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
@@ -113,3 +109,109 @@ form input[type="submit"]:hover {
     cursor: pointer;
 }
 
+/* Media Queries */
+
+/* Mobile */
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 12px;
+    }
+
+    h1 {
+        font-size: 16px;
+        margin-top: 40px;
+    }
+
+    #logo img {
+        height: 20px;
+        width: auto;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-bottom: 0;
+    }
+
+    nav {
+        margin: 0;
+    }
+
+    nav a {
+        font-size: 12px;
+    }
+
+    form {
+        margin: 20px;
+    }
+
+    form div {
+        margin-top: 10px;
+    }
+
+    form label {
+        width: 30%;
+        margin-right: 10px;
+        text-align: left;
+    }
+
+    form input[type="text"] {
+        flex: 1;
+        max-width: 100%;
+        margin-right: 10px;
+    }
+
+    form input[type="submit"] {
+        margin: 10px 0;
+        margin-left: auto;
+    }
+}
+
+/* Tablet */
+@media screen and (max-width: 1024px) {
+
+   
+    h1 {
+        margin-top: 14vw;
+        font-size: 16px;
+        margin-left: 4vw;
+    }
+
+    nav {
+        margin-top: 0vw;
+        margin-right: 1vw;
+    }
+
+    nav a {
+        font-size: 12px;
+    }
+
+    form h2 {
+        font-size: 15px;
+        margin: 4vw;
+        padding-top: 5vw;
+        margin-left: 0;
+    }
+
+    form {
+        margin: 4vw;
+    }
+
+    form div {
+        margin-top: 2vw;
+    }
+
+    form label {
+        width: 30%;
+        margin-right: 1vw;
+        text-align: left;
+    }
+
+    form input[type="text"] {
+        flex: 1;
+        max-width: 100%;
+        margin-right: 1vw;
+    }
+
+    form input[type="submit"] {
+        margin: 2vw 0;
+        margin-left: auto;
+    }
+}
