--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-/* General */
+/* style.css */
 
+/* General */
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Navigation Bar */
-
 nav {
     display: flex;
     align-items: flex-end;
@@ -30,7 +30,6 @@ nav a:hover {
 }
 
 /* Header */
-
 h1 {
     font-size: 86px;
     display: flex;
@@ -38,28 +37,27 @@ h1 {
     margin-top: 6%;
     font-weight: 620;
     letter-spacing: -3px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .blue {
-
-color: rgb(57, 140, 223);
+    color: rgb(57, 140, 223);
 }
 
 .red {
- color: red;
+    color: red;
 }
 
 .yellow {
-color: rgb(255, 200, 0);
+    color: rgb(255, 200, 0);
 }
 
 .green {
-color: rgb(41, 173, 41);
+    color: rgb(41, 173, 41);
 }
 
 .red {
-color: rgb(221, 62, 62);
+    color: rgb(221, 62, 62);
 }
 
 h3 {
@@ -74,7 +72,6 @@ h3 {
 }
 
 /* Search Bar */
-
 form {
     display: flex;
     justify-content: center;
@@ -95,16 +92,15 @@ form input[type="text"] {
 }
 
 form input[type="text"]:hover {
-    box-shadow: 1px 1px 1px 1px  lightgray;
+    box-shadow: 1px 1px 1px 1px lightgray;
     border-color: lightgray;
-} 
+}
 
 /* Buttons */
-
 form .buttons {
-display: flex;
-justify-content: center;
-margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 form input[type="submit"] {
@@ -124,7 +120,6 @@ form input[type="submit"] {
     user-select: none;
 }
 
-
 form input[type="submit"]:hover {
     border: solid lightgray;
     box-shadow: 1px 1px 1px rgb(168, 168, 168);
@@ -136,7 +131,94 @@ form .buttons input[type="submit"]:first-child {
     margin-right: 10px;
 }
 
+/* Media Queries */
 
+/* Mobile */
+@media screen and (max-width: 600px) {
+    nav a {
+        font-size: ;
+    }
 
+    h1 {
+        margin-top: 16vw;
+        font-size: 14vw;
+    }
 
+    h3 {
+        margin-top: -12vw;
+        margin-left: 35vw;
+        margin-bottom: 7vw;
+    }
 
+    nav {
+        margin-top: 6vw;
+        margin-right: 2vw;
+    }
+
+    form {
+        margin-top: 4vw;
+        align-items: center;
+        margin-left: 4vw;
+        width: 90%;
+    }
+
+    form input[type="text"] {
+        width: 80%;
+        margin-top: 2vw;
+    }
+
+    form .buttons {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 4vw;
+    }
+
+    form input[type="submit"] {
+        width: 100%;
+    }
+}
+
+/* Tablet */
+@media screen and (min-width: 601px) and (max-width: 1050px) {
+    h1 {
+        margin-top: 20%;
+        font-size: 14vw;
+    }
+
+    h3 {
+        margin-top: -12vw;
+        font-size: 1em;
+        margin-left: 34vw;
+    }
+
+    nav {
+        margin-top: 3%;
+        margin-right: 5%;
+    }
+
+    nav a {
+        font-size: 12px;
+    }
+
+    form {
+        margin-top: 5%;
+        align-items: center;
+        margin-left: 5%;
+        width: 90%;
+    }
+
+    form input[type="text"] {
+        width: 80%;
+        margin-top: 10px;
+    }
+
+    form .buttons {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 3%;
+    }
+
+    form input[type="submit"] {
+        width: 100%;
+    }
+}
